--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "private": true,
   "dependencies": {
     "amqplib": "*",
+    "angular-material-time-picker": "^1.0.8",
     "body-parser": "^1.5.0",
     "compression": "^1.2.0",
     "connect-redis": "3.3.x",
