--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "dependencies": {
     "amqplib": "*",
     "angular-material-time-picker": "^1.0.8",
+    "angular-socialshare": "^2.3.11",
     "body-parser": "^1.5.0",
     "compression": "^1.2.0",
     "connect-redis": "3.3.x",
